--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,4 +8,4 @@ jobs:
     - name: Install modules
       run: npm install
     - name: Run ESLint
-      run: npm run lint
+      run: npm run eslint . --ext .js,.jsx,.ts,.tsx
